# speedy-api

./: README.md
backend_speed/: .env  pyproject.toml
backend_speed/backend_speed/: run.py
backend_speed/backend_speed/Interface/product/: product_base.py  product_interface.py
backend_speed/backend_speed/Interface/sale/: sale_base.py  sale_interface.py
backend_speed/backend_speed/Interface/user/: user_base.py  user_interface.py
backend_speed/backend_speed/config/: connection.py  settings.py
backend_speed/backend_speed/constants/: index.py
backend_speed/backend_speed/depencies/: user.py
backend_speed/backend_speed/enums/: index.py
backend_speed/backend_speed/models/product/: product_base.py  products.py
backend_speed/backend_speed/models/sale/: saleOuput.py  sales.py
backend_speed/backend_speed/models/token/: index.py
backend_speed/backend_speed/models/user/: response.py  user_base.py  users.py
backend_speed/backend_speed/routers/products/: product.py
backend_speed/backend_speed/routers/sales/: sale.py
backend_speed/backend_speed/routers/users/: user.py
backend_speed/backend_speed/schema/: products.py  sales.py  users.py
backend_speed/backend_speed/utils/: user.py
